--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-saga": "^0.16.2",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "start": "node scripts/start.js",
