--- a/package.json
+++ b/package.json
@@ -23,37 +23,48 @@
   },
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/*.d.ts"
     ],
     "setupFiles": [
       "<rootDir>/config/polyfills.js"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,mjs}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,mjs}"
+      "<rootDir>/src/**/__tests__/**/*.(j|t)s?(x)",
+      "<rootDir>/src/**/?(*.)(spec|test).(j|t)s?(x)"
     ],
     "testEnvironment": "node",
     "testURL": "http://localhost",
     "transform": {
       "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.tsx?$": "<rootDir>/config/jest/typescriptTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$"
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|ts|tsx)$"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
     "moduleFileExtensions": [
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
       "web.js",
       "js",
-      "json",
       "web.jsx",
       "jsx",
+      "json",
       "node",
       "mjs"
-    ]
+    ],
+    "globals": {
+      "ts-jest": {
+        "tsConfigFile": "/Users/moonrailgun/Develop/Inventory/sapp/tsconfig.test.json"
+      }
+    }
   },
   "babel": {
     "presets": [
@@ -64,6 +75,13 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@types/jest": "^23.3.5",
+    "@types/node": "^10.12.0",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router": "^4.0.32",
+    "@types/react-router-dom": "^4.3.1",
     "autoprefixer": "^7.1.6",
     "babel-core": "^6.26.0",
     "babel-eslint": "^7.2.3",
@@ -85,6 +103,7 @@
     "eslint-plugin-react": "^7.4.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
+    "fork-ts-checker-webpack-plugin": "^0.2.10",
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.29.0",
     "jest": "^20.0.4",
@@ -97,10 +116,17 @@
     "raf": "^3.4.0",
     "react-dev-utils": "^5.0.2",
     "resolve": "^1.6.0",
+    "source-map-loader": "^0.2.4",
     "style-loader": "^0.19.0",
     "sw-precache-webpack-plugin": "^0.11.4",
+    "ts-jest": "^22.0.1",
     "ts-loader": "^5.2.2",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-react": "^3.6.0",
     "typescript": "^3.1.3",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.11.3",
