--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "react-split-pane": "^0.1.84",
     "redux": "^4.0.0",
     "redux-immutable": "^4.0.0",
     "redux-logger": "^3.0.6",
