--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "extends": "react-app"
   },
   "devDependencies": {
+    "@types/inline-style-prefixer": "^3.0.1",
     "@types/jest": "^23.3.5",
     "@types/node": "^10.12.0",
     "@types/react": "^16.4.18",
